--- a/test.html
+++ b/test.html
@@ -1,69 +1,14 @@
-<html>
- <head>
-   
- </head>
- <body>
-
-  <script src="https://www.puck-js.com/puck.js"></script>
-  <script type="text/javascript">
-
-   async function connectPuckJS() {
-    try {
-        console.log("🔍 Suche nach Puck.js...");
-
-        // 1️⃣ Suche nach einem Puck.js Gerät mit Nordic UART Service
-        const device = await navigator.bluetooth.requestDevice({
-            filters: [{ namePrefix: "Puck.js" }],
-            optionalServices: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e'] // Nordic UART Service UUID
-        });
-
-        console.log(`✅ Gefunden: ${device.name}`);
-
-        // 2️⃣ Verbindung herstellen
-        const server = await device.gatt.connect();
-        console.log("🔗 Verbindung hergestellt!");
-
-        // 3️⃣ UART Service abrufen
-        const service = await server.getPrimaryService('6e400001-b5a3-f393-e0a9-e50e24dcca9e');
-
-        // 4️⃣ RX-Charakteristik (Datenempfang) abrufen
-        const characteristic = await service.getCharacteristic('6e400003-b5a3-f393-e0a9-e50e24dcca9e');
-
-        // 5️⃣ Benachrichtigungen aktivieren
-        await characteristic.startNotifications();
-        console.log("📡 Benachrichtigungen aktiviert!");
-
-        // 6️⃣ Event-Listener für Button-Events hinzufügen
-        characteristic.addEventListener('characteristicvaluechanged', (event) => {
-            let value = new TextDecoder().decode(event.target.value);
-            console.log(`🔹 Empfangene Daten: ${value}`);
-
-            if (value.includes("BTN_DOWN")) {
-                console.log("⬇️ Button wurde gedrückt!");
-            } else if (value.includes("BTN_UP")) {
-                console.log("⬆️ Button wurde losgelassen!");
-            }
-        });
-
-        // 7️⃣ Puck.js über UART befehlen, Button-Events zu senden
-        const txCharacteristic = await service.getCharacteristic('6e400002-b5a3-f393-e0a9-e50e24dcca9e');
-        const command = "setWatch(function(e) {Bluetooth.println(e.state ? 'BTN_DOWN' : 'BTN_UP');}, BTN, {edge:'both', debounce:50, repeat:true});\n";
-        await txCharacteristic.writeValue(new TextEncoder().encode(command));
-        console.log("🎯 Button-Event-Listener auf Puck.js aktiviert!");
-
-    } catch (error) {
-        console.error("❌ Fehler:", error);
-    }
-}
-
-
-
-// 🔘 Button in HTML, um Verbindung zu starten
-document.querySelector("#connectButton").addEventListener("click", connectPuckJS);
-   
-  </script>
-  
-  <button id="connectButton">🔗 Mit Puck.js verbinden</button>
- 
- </body>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Puck.js Button Tester</title>
+    <script defer src="script.js"></script>
+</head>
+<body>
+    <h1>Puck.js Button Tester</h1>
+    <button id="connectButton">🔗 Mit Puck.js verbinden</button>
+    <p id="status">🔴 Nicht verbunden</p>
+</body>
 </html>
