--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-     <script src="https://www.puck-js.com/puck.js"></script>
+     //<script src="https://www.puck-js.com/puck.js"></script>
     <h1>Puck.js Button Tester</h1>
     <button id="connectButton">🔗 Mit Puck.js verbinden</button>
     <p id="status">🔴 Nicht verbunden</p>
